--- a/css/funky-style.css
+++ b/css/funky-style.css
@@ -6661,13 +6661,13 @@ ul.countdown li p {
 .portfolio-mask-3 {
     position: absolute;
     width: calc(100% - 40px);
-    height: calc(100% - 40px);
+    height: calc(30%);
     left:20px;
-    top:20px;
+    top: calc(70% - 20px);
     z-index: 1;
     display: block;
     opacity: 0;
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.75);
     -webkit-transition: all 250ms linear;
     -moz-transition: all 250ms linear;
     -o-transition: all 250ms linear;
@@ -6729,10 +6729,11 @@ ul.countdown li p {
     left: 0;
     z-index: 3;
     opacity: 0;
+    padding-left: 10%;
     margin-bottom: 0;
-    width: 100%;
+    width: 90%;
     text-align: center;
-    top: 50%;
+    top: 71%;
     -webkit-transition: all 300ms linear;
     -moz-transition: all 300ms linear;
     -o-transition: all 300ms linear;
@@ -6775,8 +6776,8 @@ ul.countdown li p {
     line-height: 20px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
-    margin-top: -25px;
-    color: #afafaf;
+    margin-top: -19px;
+    color: #595959;
 }
 .portfolio-box-1 h5.on-center{
     bottom: auto;
