Add some projects

--- a/css/funky-style.css
+++ b/css/funky-style.css
@@ -4960,7 +4960,7 @@ figure.vimeo a img, figure.youtube a img {
     padding-right:7px;
 }
 .hero-social.light-social li a{
-    color:#f9f9f9;
+    color: #545454;
 }
 .hero-social li a{
     position:relative;
