Add consent request for playing embedded youtube videos

--- a/src/globals.css
+++ b/src/globals.css
@@ -5,6 +5,7 @@
   --width-xs: 540px;
 
   --accent-color: #42b983;
+  --accent-color-light: #5df1af;
   --header-text-color: #fff;
   --header-dark-color: #111;
 
